--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,8 @@
 		"plugin:react/recommended",
 		"plugin:@typescript-eslint/recommended",
 		"plugin:jsx-a11y/recommended",
-		"plugin:sonarjs/recommended"
+		"plugin:sonarjs/recommended",
+		"plugin:jest/recommended"
 	],
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
@@ -29,7 +30,8 @@
 		"react-hooks",
 		"@typescript-eslint",
 		"jsx-a11y",
-		"sonarjs"
+		"sonarjs",
+		"jest"
 	],
 	"rules": {
 		/* STANDARD */
@@ -49,7 +51,7 @@
 		"@typescript-eslint/no-explicit-any": "error",
 
 		/* REACT */
-		"react/display-name": "error",
+		"react/display-name": "off",
 		"react/prop-types": "off",
 
 		/* REACT HOOKS */
