--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
 		"lint": "eslint --ext .ts,.tsx src/",
-		"deploy": "npm run lint && npm run test && gh-pages -d build"
+		"deploy": "gh-pages -d build"
 	},
 	"eslintConfig": {
 		"extends": [
